[package]
name = "moai"
description = "Fast 3d graphics framework"
repository = "https://github.com/bpm-mcgill/moai"
license = "GPL-3.0+"
version = "0.0.2"
edition = "2021"
keywords = ["moai"]

[workspace]
members = [
    "crates/*",
]

[features]
default = [
    "moai_window",
]

[dependencies]
moai_core = { path="crates/moai_core", version="0.0.2" }
moai_window = { path="crates/moai_window", optional=true, version="0.0.1" }

[dev-dependencies]
# Used for the examples
gl = "0.14.0"
glfw = "0.51.0"
env_logger = "0.10.0"
glam = "0.23.0"
image = "0.24.6"

[[example]]
name = "testing"
path = "examples/testing.rs"